# XPilotNG

./: bootstrap
xpilot/: .cvsignore  .xpilotrc  AUTHORS  BUGS  ChangeLog  FEATURES  INSTALL  INSTALL.txt  Imakefile  Local.config  Local.rules  Makefile.am  Makefile.in  README  README.in  README.txt  README.txt.msub  TODO  aclocal.m4  bootstrap  config.h.in  configure  configure.ac  kps_configure.sh  macosx_config.h  mapconvert.py  teamcup.map  teamcup.xp2
xpilot/XPilotNG.xcode/: project.pbxproj
xpilot/contrib/: Imakefile  Makefile.in  README  mapmapper.c  xmkmf-patch
xpilot/contrib/TkXpInterface/: .cvsignore  Makefile
xpilot/contrib/debian/: changelog  control  rules  xpilot-ng-client-sdl.menu  xpilot-ng-client-x11.menu  xpilot-ng-common.dirs
xpilot/contrib/jxpmap/: README  build.xml
xpilot/contrib/jxpmap/python/: LineStyle.py  MainFrame.py  MapBall.py  MapBase.py  MapCanvas.py  MapCheckPoint.py  MapFuel.py  MapModel.py  MapObject.py  MapObjectPopup.py  MapPolygon.py  PolygonPropertyEditor.py  PolygonStyle.py  README  config.py  javastuff.py
xpilot/contrib/macosx/: config.h
xpilot/contrib/msub/: Imakefile  msub.c  test.out
xpilot/contrib/windows/: installer.nsi
xpilot/contrib/xpngcc/: Makefile.in  config.py  meta.py  metaui.py  options.py  serverui.py  xpilot.py  xpngcc.py  xputil.py
xpilot/doc/: BUGS  CREDITS  ChangeLog  ChangeLog-3  ChangeLog-NG  Imakefile  Makefile.in  README.rank  xpilot-4.5.4-x2.spec  xpilot-ng-sdl.spec  xpilot-ng-x11.spec  xpilot.spec
xpilot/doc/man/: .cvsignore  Imakefile  Makefile.am  Makefile.in  help2man.sh  xp-replay.man  xp-replay.man.in  xpilot-ng-replay.man  xpilot-ng-sdl.man  xpilot-ng-sdl.man.in  xpilot-ng-server.man  xpilot-ng-server.man.in  xpilot-ng-x11.man  xpilot-ng-x11.man.in  xpilot-ng-xp-mapedit.man  xpilot.man  xpilot.man.in  xpilot.man.msub  xpilots.man  xpilots.man.in  xpilots.man.msub
xpilot/lib/: Imakefile  Makefile.am  Makefile.in  defaults  shipshapes  shipshapes.txt
xpilot/lib/fonts/: Makefile.am  Makefile.in
xpilot/lib/maps/: CAMD.xp  Imakefile  Makefile.am  Makefile.in  _polybloods7.xp2  blood-music.xp2  circle2.xp2  cloudscape.xp  dodgers-legacy.xp2  dodgers-robots.xp2  dodgers.xp  doggy.xp  dragon-1.0.xp2  fuzz.xp  fuzz2.xp  marahacked_teamcup2001.xp  ndh.xp2  ndh.xpd  pacman.xp2  pit.xp  planetx.xp  polybloods.xp2  polybloods7.xp2  polybloods_new_shotlimit.xp2  polyfishtank3.xp2  sadistic_bastard_v2.xp2  spaceball-0.1.xp2  spaceball-0.2.xp2  teamcup.xp
xpilot/lib/sound/: Makefile.am  Makefile.in  sounds.txt
xpilot/lib/textures/: Imakefile  Makefile.am  Makefile.in  rock4.xpm  shield.ppm
xpilot/src/: Imakefile  Makefile.am  Makefile.in  Makefile.std
xpilot/src/client/: Imakefile  Makefile.am  Makefile.in  about.c  afaudio.c  bitmaps.c  bitmaps.h  blockbitmaps.c  blockbitmaps.h  caudio.c  caudio.h  client.c  client.h  clientcommand.c  clientcommand.h  clientrank.c  clientrank.h  colors.c  configure.c  configure.h  connectparam.h  datagram.c  datagram.h  dbuff.c  dbuff.h  debugaudio.c  default.c  default.h  esdaudio.c  event.c  gfx2d.c  gfx2d.h  gfx3d.c  guimap.c  guimap.h  guiobjects.c  guiobjects.h  hpaudio.c  icon.h  ignore.c  (+56 more)
xpilot/src/client/NT/: .cvsignore  BSString.cpp  BSString.h  MainFrm.cpp  MainFrm.h  Makefile.am  Makefile.in  RecordDummy.c  Splash.cpp  Splash.h  StdAfx.cpp  StdAfx.h  TalkWindow.cpp  TalkWindow.h  XPilot.ini  XPilotNT.cpp  XPilotNT.h  about.c  bitmaps.c  colors.c  configure.c  guimap.c  guiobjects.c  join.c  paintdata.c  painthud.c  paintradar.c  record.c  record.h  welcome.c  widget.c  winAbout.cpp  winAbout.h  winAudio.c  winAudio.h  winBitmap.c  winBitmap.h  winClient.h  winColors.c  winConfig.c  (+22 more)
xpilot/src/client/items/: Makefile.in
xpilot/src/client/sdl/: .cvsignore  DT_drawtext.c  DT_drawtext.h  Makefile  Makefile.am  Makefile.hack  Makefile.in  SDL_console.c  SDL_console.h  SDL_gfxPrimitives.c  SDL_gfxPrimitives.h  SDL_gfxPrimitives_font.h  TODO  asteroid_data.h  console.c  console.h  gameloop.c  gameloop_x.c  glwidgets.c  glwidgets.h  images.c  images.h  main.c  options.c  radar.c  radar.h  scrap.c  sdlevent.c  sdlgui.c  sdlinit.c  sdlinit.h  sdlkeys.c  sdlkeys.h  sdlmeta.c  sdlmeta.h  sdlpaint.c  sdlpaint.h  sdlwindow.c  sdlwindow.h  text.c  (+8 more)
xpilot/src/client/x11/: .cvsignore  Makefile.am  Makefile.in  about.c  bitmaps.c  bitmaps.h  colors.c  configure.c  dbuff.c  guimap.c  guiobjects.c  icon.h  join.c  paintdata.c  paintdata.h  painthud.c  paintradar.c  (+15 more)
xpilot/src/common/: Imakefile  Makefile.am  Makefile.in  arraylist.c  arraylist.h  astershape.h  audio.h  bit.h  checknames.c  checknames.h  cmw.c  cmw.h  commonproto.h  config.c  config.h  const.h  draw.h  error.c  error.h  item.h  keys.h  list.c  list.h  math.c  metaserver.h  net.c  net.h  pack.h  packet.h  portability.c  portability.h  randommt.c  rules.h  setup.h  shipshape.c  socklib.c  socklib.h  strcasecmp.c  strdup.c  strlcpy.c  (+8 more)
xpilot/src/mapedit/: .cvsignore  COPYRIGHT  Imakefile  Makefile  Makefile.am  Makefile.dist  Makefile.in  README  README.UPDATE  TODO  T_Form.c  T_Form.h  T_Handler.c  T_Handler.h  T_Popup.c  T_Popup.h  T_Toolkit.c  T_Toolkit.h  T_proto.h  default_colors.h  defaults.h  events.c  events.h  expose.c  expose.h  file.c  file.h  forms.c  forms.h  grow.c  grow.h  help.c  help.h  main.c  main.h  map.h  proto.h  round.c  round.h  tools.c  (+2 more)
xpilot/src/replay/: Imakefile  Makefile.am  Makefile.in  buttons.c  buttons.h  xp-replay.c  xp-replay.h
xpilot/src/server/: Imakefile  Makefile.am  Makefile.in  alliance.c  asteroid.c  asteroid.h  auth.c  auth.h  cannon.c  cannon.h  cell.c  click.h  cmdline.c  collision.c  command.c  connection.h  contact.c  defaults.h  draw.h  event.c  fileparser.c  frame.c  global.h  gravity.c  id.c  item.c  laser.c  map.c  map.h  metaserver.c  metaserver.h  modifiers.c  modifiers.h  netserver.c  netserver.h  object.c  object.h  objpos.c  objpos.h  option.c  (+51 more)
xpilot/src/xpilotstudio/: const.h  default_colors.h  default_settings.h  document.c  draw.c  errors.c  geometry.c  helper.c  main.h  map.c  map.h  map_file.c  objects.h  polygon.c  proto.h  ship.c
(+113 files in other folders)
