
#libdir = $(prefix)/lib/xpilot/maps
xpilotmapdir = $(pkglibdir)/maps
xpilotmap_DATA = \
	CAMD.xp \
	blood-music2.xp \
	cloudscape.xp \
	default.xp \
	dodgers.xp \
	doggy.xp \
	fireball.xp \
	fuzz.xp \
	fuzz2.xp \
	globe.xp \
	grandprix.xp \
	newdarkhell.xp \
	newdarkhell2.xp \
	pad.xp \
	pit.xp \
	planetx.xp \
	teamball.xp \
	tourmination.xp \
	tournament.xp \
	war.xp
EXTRA_DIST = $(xpilotmap_DATA)


