
xpilotmapdir = $(pkglibdir)/maps
xpilotmap_DATA = \
	CAMD.xp \
	blood-music2.xp \
	cloudscape.xp \
	default.xp \
	dodgers.xp \
	doggy.xp \
	fireball.xp \
	fuzz.xp \
	fuzz2.xp \
	globe.xp \
	grandprix.xp \
	marahacked_teamcup2001.xp \
	newdarkhell.xp \
	newdarkhell2.xp \
	pad.xp \
	pit.xp \
	planetx.xp \
	polybloods.xp2 \
	teamball.xp \
	tourmination.xp \
	tournament.xp \
	war.xp
EXTRA_DIST = $(xpilotmap_DATA)


