AM_CPPFLAGS = -DCONF_DATADIR=\"$(pkgdatadir)/\"
noinst_LIBRARIES = libxpcommon.a
libxpcommon_a_SOURCES = \
	astershape.h audio.h \
	bit.h \
	checknames.c checknames.h commonproto.h config.c const.h \
	draw.h \
	error.c error.h \
	item.h \
	keys.h \
	list.c list.h \
	math.c metaserver.h \
	net.c net.h \
	pack.h packet.h portability.c portability.h \
	randommt.c rules.h \
	setup.h shipshape.c socklib.c socklib.h \
	strcasecmp.c strdup.c strlcpy.c \
	types.h \
	version.h \
	wreckshape.h \
	xpcommon.h xpconfig.h xpmemory.c

SUBDIRS = NT
