
EXTRA_DIST = \
BSString.cpp   TalkWindow.cpp  winAudio.h    wintalk.c \
BSString.h     TalkWindow.h    winBitmap.c   xpilot.dep \
MainFrm.cpp    XPilot.ini      winBitmap.h   xpilot.dsp \
MainFrm.h      XPilot.shp      winClient.h   xpilot.dsw \
XPilotNT.cpp    winColors.c   xpilot.mak \
XPilotNT.h      winConfig.c   xpilot.rc \
RecordDummy.c  credits.inc.h   winConfig.h   xpilotDoc.cpp \
Splash.cpp     resource.h      winXThread.c  xpilotDoc.h \
Splash.h       winAbout.cpp    winXThread.h  xpilotView.cpp \
StdAfx.cpp     winAbout.h      winXXPilot.c  xpilotView.h \
StdAfx.h       winAudio.c      winXXPilot.h

SUBDIRS = res

